Bug 468598 - failure to display a sagemath graphic instruction like plot
Summary: failure to display a sagemath graphic instruction like plot
Status: RESOLVED FIXED
Alias: None
Product: cantor
Classification: Applications
Component: sage-backend (other bugs)
Version First Reported In: 22.12.3
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Cantor Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-04-17 07:54 UTC by budejadup62@gmail.com
Modified: 2023-05-20 17:33 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.04.2
Sentry Crash Report:


Attachments
the attachment shows a window where both the result of the instruction is shown plot(sin,0,1) within a sage notebook , and the result of the same instruction in cantor , where the plot is not shown (389.55 KB, image/png)
2023-04-17 07:54 UTC, budejadup62@gmail.com
Details

Note You need to log in before you can comment on or make changes to this bug.
Description budejadup62@gmail.com 2023-04-17 07:54:13 UTC
Created attachment 158159 [details]
the attachment shows a window where both the result of the instruction is shown  plot(sin,0,1) within a sage notebook , and the result of the same instruction in cantor , where the plot is not shown

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. insert the simple command : plot(sin,0,1)
2. 
3. 

OBSERVED RESULT
Launched png viewer for Graphics object consisting of 1 graphics primitive

EXPECTED RESULT
a window with the graph is not launched, as is the case in sage, and as seen in attchment

SOFTWARE/OS VERSIONS

Linux/KDE Plasma: 
Manjaro 64 bit/ KDE Plasma

KDE Plasma Version: 
KDE (plasmashell 5.27.4)

Qt Version: 
QMake version 3.1
Using Qt version 5.15.8 in /usr/lib

ADDITIONAL INFORMATION
sagemath installed
Comment 1 Bug Janitor Service 2023-05-18 17:24:38 UTC
A possibly relevant merge request was started @ https://invent.kde.org/education/cantor/-/merge_requests/55
Comment 2 Antonio Rojas 2023-05-20 06:35:15 UTC
Git commit 6b14d7d5960c5383aaec96b7aea1ce4bd3680f1e by Antonio Rojas.
Committed on 18/05/2023 at 17:21.
Pushed by asemke into branch 'master'.

Fix displaying plots in sagemath>=9.7

The temporary file location has moved under /tmp, so we need to monitor the new path. This also works around a crash in git master caused by a deprecation warning.
Related: bug 469404

M  +5    -1    src/backends/sage/sagesession.cpp

https://invent.kde.org/education/cantor/commit/6b14d7d5960c5383aaec96b7aea1ce4bd3680f1e
Comment 3 Antonio Rojas 2023-05-20 17:33:15 UTC
Git commit d7d3ec2809eec1e818a5ec15c7018b3dc0b587cd by Antonio Rojas.
Committed on 20/05/2023 at 09:00.
Pushed by arojas into branch 'release/23.04'.

Fix displaying plots in sagemath>=9.7

The temporary file location has moved under /tmp, so we need to monitor the new path. This also works around a crash in git master caused by a deprecation warning.
Related: bug 469404


(cherry picked from commit 6b14d7d5960c5383aaec96b7aea1ce4bd3680f1e)

M  +5    -1    src/backends/sage/sagesession.cpp

https://invent.kde.org/education/cantor/commit/d7d3ec2809eec1e818a5ec15c7018b3dc0b587cd