Fix displaying plots in sagemath>=9.7

The temporary file location has moved under /tmp, so we need to monitor the new path. This also works around a crash in git master caused by a deprecation warning.

BUG: 468598
CCBUG: 469404